# linalg

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.rag/: _RAG.md
.rag/arch/: C2_container.md  C3_component.md  C4_code.md
.rag/meta/: build_targets.md  claude_card.md  cmake_summary.md
.rag/test_params/: capon_CaponProcessor.md  dsp_linalg_CaponProcessor.md
.rag/use_cases/: benchmark_symmetrize.md  capon_benchmark_rocm.md  capon_hip_opencl_to_rocm.md  capon_opencl_to_rocm.md  capon_reference_data.md  capon_rocm.md  cholesky_inverter_rocm.md  cross_backend_conversion.md  python__linalg.md  stage_profiling.md
Doc/: API.md  Full.md  Patterns.md  Quick.md  capon_API.md  capon_Full.md  capon_Quick.md  vector_algebra_API.md  vector_algebra_Full.md  vector_algebra_Quick.md
cmake/: DspLinalgConfig.cmake.in  version.cmake
include/dsp/linalg/: capon_processor.hpp  capon_types.hpp  cholesky_inverter_rocm.hpp  diagonal_load_regularizer.hpp  i_matrix_regularizer.hpp  matrix_ops_rocm.hpp  no_op_regularizer.hpp  vector_algebra_types.hpp
include/dsp/linalg/kernels/: capon_kernels_rocm.hpp  diagonal_load_kernel_rocm.hpp  symmetrize_kernel_sources_rocm.hpp
include/dsp/linalg/operations/: adapt_beam_op.hpp  capon_invert_op.hpp  capon_relief_op.hpp  compute_weights_op.hpp  covariance_matrix_op.hpp
include/linalg/: capon_processor.hpp  capon_types.hpp  cholesky_inverter_rocm.hpp  diagonal_load_regularizer.hpp  i_matrix_regularizer.hpp  matrix_ops_rocm.hpp  no_op_regularizer.hpp  vector_algebra_types.hpp
include/linalg/kernels/: capon_kernels_rocm.hpp  diagonal_load_kernel_rocm.hpp  symmetrize_kernel_sources_rocm.hpp
include/linalg/operations/: adapt_beam_op.hpp  capon_invert_op.hpp  capon_relief_op.hpp  compute_weights_op.hpp  covariance_matrix_op.hpp
python/: CMakeLists.txt  dsp_linalg_module.cpp  py_capon_rocm.hpp  py_vector_algebra_rocm.hpp  t_linalg.py  test_linalg.py
src/capon/: CMakeLists.txt  capon_processor.cpp
src/capon/include/: capon_types.hpp
src/capon/include/operations/: capon_invert_op.hpp  capon_relief_op.hpp  covariance_matrix_op.hpp
src/capon/kernels/: Capon_kernels.cl  manifest.json
src/capon/src/: capon_processor.cpp
src/capon/tests/: GUIDE_opencl_to_rocm.md  capon_benchmark.hpp  test_capon_benchmark_rocm.hpp  test_capon_hip_opencl_to_rocm.hpp  test_capon_rocm.hpp
src/capon/tests/data/: y_data.txt
src/vector_algebra/: CMakeLists.txt  cholesky_inverter_rocm.cpp  diagonal_load_regularizer.cpp  matrix_ops_rocm.cpp  symmetrize_gpu_rocm.cpp
src/vector_algebra/include/: cholesky_inverter_rocm.hpp  diagonal_load_regularizer.hpp  matrix_ops_rocm.hpp  no_op_regularizer.hpp
src/vector_algebra/kernels/: manifest.json
src/vector_algebra/src/: cholesky_inverter_rocm.cpp  diagonal_load_regularizer.cpp  matrix_ops_rocm.cpp  symmetrize_gpu_rocm.cpp
src/vector_algebra/tests/: README.md  all_test.hpp  test_benchmark_symmetrize.hpp  test_cholesky_inverter_rocm.hpp  test_cross_backend_conversion.hpp
src/vector_algebra/tests/Data/: R_341 (1).csv  R_85 (1).csv  R_inv_341.csv
tests/: CMakeLists.txt  README.md  all_test.hpp  capon_benchmark.hpp  capon_test_helpers.hpp  main.cpp  test_benchmark_symmetrize.hpp  test_capon_benchmark_rocm.hpp  test_capon_hip_opencl_to_rocm.hpp  test_capon_opencl_to_rocm.hpp  test_capon_reference_data.hpp  test_capon_rocm.hpp  test_cholesky_inverter_rocm.hpp  test_cross_backend_conversion.hpp  test_stage_profiling.hpp
tests/Data/: README_DATA.md  R_inv_85.csv  x_data.txt  z_values.txt
